# misstortion1

./: .travis.yml  CMakeLists.txt  Makefile  Misstortion.jucer  README.md  Readme.md  build_lv2_linux.sh
LV2/: Makefile  premake5.lua
LV2/linux/gmake/: Makefile  misstortion_lv2.make
src/: CMakeLists.txt  DistrhoPluginInfo.h  Makefile  MisstortionParameters.hpp  MisstortionPlugin.cpp  MisstortionUI.cpp  MisstortionUI.hpp
